ci: update workflows config.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,8 @@ on:
     tags:
       - v*
   schedule:
-    # 每2天 5:30 UTC 触发工作流程
-    - cron:  '30 5 */2 * *'
+    # 每天 5:30 UTC 触发工作流程
+    - cron:  '30 5 * * *'
 
 jobs:
   build-deploy:
